--- a/.github/workflows/codemap.yml
+++ b/.github/workflows/codemap.yml
@@ -2,7 +2,11 @@ name: Codemap and line-limit checks
 
 on:
   push:
+    branches: ["**"]
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   codemap:
@@ -12,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -27,12 +32,14 @@ jobs:
       - name: Commit codemap if changed
         run: |
           set -e
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
           if [[ -n "$(git status --porcelain codemap.json CODEMAP.md)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
             git add codemap.json CODEMAP.md
             git commit -m "chore: update codemap [skip ci]"
-            git push
+            git push origin "HEAD:${{ github.ref_name }}"
           else
             echo "No codemap changes"
           fi
